--- a/lib-test-venv/requirements.txt
+++ b/lib-test-venv/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.13.4
 certifi==2025.4.26
 charset-normalizer==3.4.2
 contourpy==1.3.2
@@ -20,6 +21,8 @@ requests==2.32.3
 scikit-learn==1.6.1
 scipy==1.15.3
 six==1.17.0
+soupsieve==2.7
 threadpoolctl==3.6.0
+typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
