--- a/lib-test-venv/requirements.txt
+++ b/lib-test-venv/requirements.txt
@@ -18,6 +18,7 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.3
+schedule==1.2.2
 scikit-learn==1.6.1
 scipy==1.15.3
 six==1.17.0
